--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
     "compilerOptions": {
-        "target": "ES2022", // versão do javascript que será compilada
-        "outDir": "./dist/js", // pasta que vai fica os arquivos js gerados
-        "noEmitOnError": true, // só vai gerar o arquivo se não tiver error nenhum apontado pelo typescript
+        "target": "ES2022",
+        "outDir": "./dist/js/",
+        "noEmitOnError": true
     },
     "include": [
-        "./src/**/*", // vai olhar os arquivos ts dentro desta pasta é fazer a compilação
+        "./src/**/*"
     ]
 }
